# PotatoCounterStrike

./: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  PotatoApp.cpp  PotatoApp.h  README.md  dots_counter.py  main.cpp  potato_n.py
.github/: FUNDING.yml
binary/: READMD.md
